# companion-app

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/agentdeck/: Cargo.toml  build.rs
crates/agentdeck-daemon/: Cargo.toml
crates/agentdeck-daemon/src/: main.rs  rpc.rs  state.rs  tray.rs  ws.rs
crates/agentdeck-daemon/src/hid/: device.rs  mod.rs  protocol.rs
crates/agentdeck-protocol/: Cargo.toml
crates/agentdeck-protocol/src/: lib.rs
crates/agentdeck/src/: daemon_client.rs  lib.rs  main.rs
crates/agentdeck/src/core/: config.rs  events.rs  mod.rs  settings.rs  state.rs  tabs.rs  text_compact.rs
crates/agentdeck/src/hid/: mod.rs  protocol.rs  soft_keys.rs
crates/agentdeck/src/macos/: menu.rs
crates/agentdeck/src/pty/: mod.rs
crates/agentdeck/src/terminal/: session.rs
crates/agentdeck/src/window/: context_menu.rs  input.rs  mod.rs  render.rs  settings_modal.rs  terminal.rs  terminal_notifications.rs
crates/agentdeck/tests/integration/: mod.rs
crates/coredeck/: Cargo.toml  build.rs
crates/coredeck-daemon/: Cargo.toml
crates/coredeck-daemon/src/: main.rs  rpc.rs  state.rs  tray.rs  ws.rs
crates/coredeck-daemon/src/hid/: commands.rs  device.rs  mod.rs  protocol.rs
crates/coredeck-protocol/: Cargo.toml
crates/coredeck-protocol/src/: lib.rs
crates/coredeck/config/: default.toml
crates/coredeck/patches/zune-jpeg/src/upsampler/: neon.rs
crates/coredeck/src/: daemon_client.rs  lib.rs  main.rs
crates/coredeck/src/core/: bookmarks.rs  claude_sessions.rs  config.rs  sessions.rs  settings.rs  state.rs  tabs.rs  text_compact.rs
crates/coredeck/src/hid/: mod.rs  protocol.rs  soft_keys.rs
crates/coredeck/src/macos/: menu.rs
crates/coredeck/src/pty/: parser.rs
crates/coredeck/src/terminal/: config.rs  mod.rs  session.rs
crates/coredeck/src/window/: render.rs  settings_modal.rs  terminal.rs  terminal_input.rs  terminal_notifications.rs  terminal_pty.rs  terminal_selection.rs
crates/coredeck/tests/fixtures/ansi_samples/: claude_status.txt  spinner_output.txt
crates/coredeck/tests/integration/: mod.rs  parser_tests.rs
docs/: API.md  Building.md  Protocol-Limits.md  REST-API.md  TERMINAL_IMPROVEMENTS.md  Types.md  WebSocket-Protocol.md  glyph-atlas-research.md  linux-setup.md
macos/: AppIcon.icns  BUILD.md  Info.plist  entitlements-appstore.plist  entitlements.plist
macos/scripts/: bundle.sh  create-dmg.sh  generate-icon.sh  setup-notarization.sh  sign.sh
scripts/: generate-tray-icons.sh
src/: lib.rs  main.rs
src/core/: bookmarks.rs  claude_sessions.rs  config.rs  events.rs  mod.rs  sessions.rs  settings.rs  state.rs  tabs.rs  themes.rs
src/hid/: commands.rs  device.rs  hotplug_macos.rs  keycodes.rs  mod.rs  protocol.rs
src/hotkey/: handler.rs  mod.rs
src/macos/: mod.rs
src/pty/: claude_state.rs  login_env.rs  mod.rs  wrapper.rs
src/terminal/: config.rs  mod.rs  notifications.rs  session.rs
src/tray/: icon.rs  menu.rs  mod.rs
src/window/: context_menu.rs  glyph_cache.rs  mod.rs  new_tab.rs  render.rs  settings_modal.rs  terminal.rs  terminal_input.rs  terminal_notifications.rs  terminal_pty.rs
tests/integration/: parser_tests.rs
