[package]
name = "agent-deck"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["vden"]
description = "Companion app for the Agent Deck macropad - connects Claude Code CLI to the hardware display"
license = "GPL-3.0-or-later"
repository = "https://github.com/vden/agentdeck"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "sync", "time", "process", "io-util"] }

# PTY management
portable-pty = "0.9"

# USB HID communication
hidapi = "2.6"

# System tray (from Tauri team)
tray-icon = "0.19"

# Event loop integration (required for tray on macOS)
winit = "0.30"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# ANSI terminal parser (for pty/parser.rs)
vte = "0.13"

# WezTerm terminal emulation (pinned to commit 05343b3 from wezterm repo)
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
wezterm-surface = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
wezterm-cell = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
wezterm-escape-parser = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
wezterm-font = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
termwiz = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }

# WezTerm config (required by wezterm-font)
config = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }

# Concurrency
parking_lot = "0.12"

# Regex for parsing Claude output
regex = "1.11"
once_cell = "1.20"

# UUID generation for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Image handling for tray icons
png = "0.17"

# Home directory detection
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Clipboard access
arboard = "3.4"

# Native file dialogs
rfd = "0.15"

# Open URLs/files with default application
open = "5.3"

# GUI for terminal window
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["svg"] }
egui_glow = { version = "0.30", features = ["winit"] }
glow = "0.16"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
mach2 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific (currently unused, retained for potential future Win32 API needs)

[target.'cfg(target_os = "linux")'.dependencies]
# Linux specific (for D-Bus, X11/Wayland)
# None required for basic functionality

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.15"

[lib]
name = "agent_deck"
path = "src/lib.rs"

[[bin]]
name = "agent-deck"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
mock-hid = []  # Enable mock HID device for testing without hardware

[lints.rust]
# The objc crate's macros emit cfg(feature = "cargo-clippy") checks
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }

# Patch zune-jpeg to fix neon unsafe issue on aarch64
[patch.crates-io]
zune-jpeg = { path = "patches/zune-jpeg" }

