[workspace]
resolver = "2"
members = [
    "crates/agentdeck-protocol",
    "crates/agentdeck",
    "crates/agentdeck-daemon",
]

# Default members for `cargo build` / `cargo run`
default-members = ["crates/agentdeck"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Patch zune-jpeg to fix neon unsafe issue on aarch64
[patch.crates-io]
zune-jpeg = { path = "patches/zune-jpeg" }
